Fix og in docs (#1842)
Fix og image in docs plus some general styling update.

Our docs don't look super great right now and the `Nextra` dev server
isn't the best. Once the website design is completed, i'd shift focus to
refreshing the theme and possibly upgrading to nextra v4. Fumadocs is an
alternative but we don't want a complete rewrite that might break
things.

For now,
1. we should have proper `og` images proxied from the website server
2. The search and examples page look a lot nicer.

One issue I've noticed is that the blue color against the pure
background is too contrasty, so when there's lot of text, it causes a
visual overwhelm. That's something to look into, NextJS AiSDK also has
that amount of contrast but i bet they compensate for it with whitespace
as well.

Generally something to look into as well.

--- a/docs/src/global.css
+++ b/docs/src/global.css
@@ -7,22 +7,20 @@ https://nextra.site/docs/docs-theme/theme-configuration#theme-color
 */
 
 .dark\:_bg-black:is(html[class~="dark"] *) {
-  background-color:#141415 !important;
+  background-color: #141415 !important;
 }
 
-nav{
-  padding: 0!important;
+nav {
+  padding: 0 !important;
 }
 
-
-div:has(aside.nextra-sidebar-container){
+div:has(aside.nextra-sidebar-container) {
   margin: 0 auto;
 }
 
 /*.nextra-nav-container + div {*/
 /*  max-width: 80rem;*/
 /*}*/
-
 
 div._transform-gpu > div > ul {
   gap: 0.15rem;
@@ -169,17 +167,16 @@ nav a {
   font-size: 14px;
 }
 nav a[aria-current="true"] {
-  background: rgba(41, 41, 41, 0.5) !important;
   font-weight: 400;
   border-radius: 0.375rem;
-  &:is(:not(html[class~="dark"] *)) {
-    background: rgb(243, 244, 246, 1) !important;
-  }
-  
 }
 
 button[title="Change theme"],
-input[type="search"],
+input[type="search"] {
+  border-radius: 9999px !important;
+}
+
 ul[role="listbox"] {
   border-radius: 0.375rem !important;
+  box-shadow: none;
 }
